switch cam is ok

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
             android:layout_weight="1"
             android:onClick="onButClk"
             android:padding="2dp"
-            android:text="Button"
+            android:text="Open"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.028"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -95,7 +95,7 @@
             android:layout_weight="1"
             android:onClick="onButClk"
             android:padding="2dp"
-            android:text="Button"
+            android:text="Pic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.028"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -117,7 +117,7 @@
             android:layout_weight="1"
             android:onClick="onButClk"
             android:padding="2dp"
-            android:text="Button"
+            android:text="Mode"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.028"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -137,9 +137,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
-            android:onClick="onButClk"
+            android:onClick="on_cam_clk"
             android:padding="2dp"
-            android:text="Button"
+            android:text="Cam"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.028"
             app:layout_constraintLeft_toLeftOf="parent"
