--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             app:layout_constraintVertical_bias="0.982" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/trigger"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -187,7 +187,7 @@
             android:layout_weight="0.8"
             android:ems="10"
             android:hint="max"
-            android:inputType="number" />
+            android:inputType="numberSigned" />
 
         <Spinner
             android:id="@+id/spinner"
