--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
+        android:id="@+id/ll2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
@@ -151,6 +152,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
