--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
+            android:onClick="onModeClk"
             android:padding="2dp"
             android:text="Mode"
             app:layout_constraintBottom_toBottomOf="parent"
