--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,7 +172,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/interv"
@@ -182,7 +183,8 @@
             android:ems="10"
             android:hint="inter"
             android:inputType="number"
-            android:text="9" />
+            android:text="9"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/editText2"
@@ -191,7 +193,8 @@
             android:layout_weight="0.8"
             android:ems="10"
             android:hint="max"
-            android:inputType="numberSigned" />
+            android:inputType="numberSigned"
+            android:textSize="14sp" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -203,7 +206,7 @@
             android:layout_marginRight="4dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:layout_weight="1.4"
+            android:layout_weight="1.6"
             android:elevation="3dp"
             app:layout_constraintBottom_toBottomOf="@+id/parent"
             app:layout_constraintHorizontal_bias="1.0"
